--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/parser": "^7.23.0",
+    "@babel/traverse": "^7.23.0",
     "argon2": "^0.31.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
